--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "vite": "^5.0.0"
     },
     "dependencies": {
+        "antd": "^5.21.2",
         "openai": "^4.67.1",
         "react-icons": "^5.3.0"
     }
